--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"Rin的记事本",
+    "subTitle":"被神明遗忘的普通人",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/59467262",
     "GMEEK_VERSION":"last"
 }
