--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
     "startSite":"07/16/2024",
     "onePageListNum":15,
     "singlePage":["about"],
-    "exlink":"",
+    "exlink":{""},
     "commentLabelColor":"#006b75",
     "yearColorList":["#bc4c00", "#0969da", "#1f883d", "#A333D0"],
     "urlMode":"ru_translit",
