--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "subTitle":"被神明遗忘的普通人",
     "avatarUrl":"https://avatars.githubusercontent.com/u/59467262",
     "GMEEK_VERSION":"last",
-    "homeUrl":"blog.nene.run",
+    "homeUrl":"https://blog.nene.run/",
     "startSite":"07/16/2024",
     "onePageListNum":15,
     "singlePage":["about"],
